--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -937,6 +937,7 @@
   padding: 0;
   margin: 0;
   display: grid;
+  overflow: hidden;
 }
 
 /* 일정만들기 3번 : 채팅 */
@@ -946,6 +947,7 @@
   flex-direction: column;
   width: 538px;
   height: 850px;
+  overflow: hidden;
 }
 
 .header {
@@ -1566,4 +1568,24 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+/* 1. body 스크롤 막기 */
+body {
+  overflow: hidden;
+}
+
+.leftSection {
+  background-color: #ffffff;
+  flex: 1;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  overflow-y: auto; /* 여행 루트 내부 스크롤 허용 */
+}
+
+.routeListContainer {
+  height: 500px;
+  overflow-y: auto;
 }
