--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -122,8 +122,8 @@
   max-width: 500px;
   height: auto;
   min-height: 55px;
-  flex-wrap: wrap;
-  gap: 10px;
+  flex-wrap: nowrap;
+  gap: 0;
 }
 
 .emailInput {
@@ -194,6 +194,19 @@
   color: #666666;
   cursor: not-allowed;
   opacity: 0.6;
+}
+
+.verifiedButton {
+  width: 106px;
+  height: 55px;
+  background-color: #57c5b6;
+  color: #ffffff;
+  font-size: 16px;
+  border: none;
+  cursor: not-allowed;
+  margin-left: 10px;
+  font-weight: 700;
+  opacity: 0.8;
 }
 
 /* 반응형 미디어 쿼리 */
