--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -9,10 +9,9 @@
 .rectangle2 {
   position: relative;
   width: 1265px;
-  height: 702px;
-  margin: 50px 0 0 312px;
+  height: 670px;
+  margin: 40px 0 0 150px;
   background: #ffffff;
-  border-radius: 30px 0px;
   box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.3);
 }
 
@@ -827,24 +826,39 @@
 }
 
 .requestBtn {
-  width: 100px;
-  height: 47px;
-  background-color: #f5f5f5;
+  width: 106px;
+  height: 55px;
+  background-color: #363636;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 700;
   border: none;
   cursor: pointer;
+  margin-left: 10px;
+}
+.requestBtn:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+  opacity: 0.6;
 }
 
 .verifyBtn {
-  width: 100px;
-  height: 47px;
-  border:1px solid #76adac;
+  width: 106px;
+  height: 55px;
+  background-color: #57c5b6;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 700;
+  border: none;
   cursor: pointer;
+  margin-left: 10px;
+}
+.verifyBtn:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+  opacity: 0.6;
 }
 
 .passwordEditingContainer {
