--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -94,8 +94,8 @@
   background: linear-gradient(313deg, rgba(0,74,85,1) 1.45%, rgba(204,234,213,1) 98.55%);
   border: none;
   border-radius: 12px;
-  width: 74px;
-  height: 74px;
+  width: 79px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -445,7 +445,7 @@
   flex-direction: column;
   justify-content: center;
   box-shadow: 0 4px 16px 0 rgba(0,0,0,0.10);
-  margin-top: 120px;
+  margin-top: 50px;
   margin-right:382px;
   margin-bottom:120px;
 }
@@ -642,13 +642,13 @@
 .heroSection {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 450px;
   background: url('/assets/images/메인화면/ocean_title.png') center/cover no-repeat;
 }
 
 .heroTextArea {
   position: absolute;
-  top: 165px;
+  top: 100px;
   left: 158px;
   display: flex;
   flex-direction: column;
@@ -658,7 +658,7 @@
 
 .heroTitle {
   color: #fff;
-  font-size: 2.5rem;
+  font-size: 32px;
   font-weight: bold;
   margin-bottom: 10px;
   text-align: left;
@@ -667,9 +667,9 @@
 
 .heroSubtitle {
   color: #fff;
-  font-size: 1.5rem;
   margin-bottom: 0;
   text-align: left;
+  font-size: 22px;
   width: 100%;
 }
 
@@ -682,7 +682,7 @@
   border-radius: 18px;
   padding: 0 32px;
   width: 1297px;
-  height: 134px;
+  height: 113px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
