--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -9,11 +9,10 @@
 }
 
 .joinContainer {
-  margin: 2rem auto;
-  width: 90%;
-  max-width: 756px;
-  height: auto;
-  min-height: 600px;
+  margin-top:108px;
+  margin-left:58px;
+  width: 550px;
+  height: 630px;
   flex-shrink: 0;
   border-radius: 30px 0px;
   background: #ffffff;
@@ -30,7 +29,7 @@
   font-family:
     Noto Sans KR,
     serif;
-  font-size: 2.5rem;
+  font-size: 1.625rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -41,7 +40,7 @@
 
 .inputGroup {
   width: 100%;
-  min-width: 480px;
+  min-width: 400px;
   height: auto;
   flex-shrink: 0;
   margin-bottom: 15px;
@@ -109,7 +108,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 480px;
+  max-width: 400px;
   flex-wrap: wrap;
 }
 
