--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -9,11 +9,10 @@
 }
 
 .loginContainer {
-  margin: 2rem auto;
-  width: 90%;
-  max-width: 756px;
-  height: auto;
-  min-height: 600px;
+  margin-top:108px;
+  margin-left:58px;
+  width: 550px;
+  height: 630px;
   flex-shrink: 0;
   border-radius: 30px 0px;
   background: #ffffff;
@@ -30,7 +29,7 @@
   font-family:
     Noto Sans KR,
     serif;
-  font-size: 2.5rem;
+  font-size: 1.625rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -50,7 +49,7 @@
 
 .inputGroup {
   width: 100%;
-  min-width: 480px;
+  min-width: 400px;
   height: auto;
   flex-shrink: 0;
   margin-bottom: 15px;
@@ -87,11 +86,11 @@
 }
 
 .submitButton {
-  width: 100%;
+  width: 400px;
   height: 55px;
   background-color: #a7cdcc;
   color: #ffffff;
-  font-size: 18px;
+  font-size: 16px;
   border: none;
   cursor: pointer;
   margin-top: 20px;
@@ -110,7 +109,7 @@
   justify-content: right;
   align-items: center;
   width: 100%;
-  max-width: 480px;
+  max-width: 400px;
   margin-top: 10px;
   flex-wrap: wrap;
 }
@@ -141,7 +140,7 @@
   flex-direction: column;
   gap: 10px;
   width: 100%;
-  max-width: 480px;
+  max-width: 400px;
   align-items: center;
 }
 
@@ -149,7 +148,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 480px;
+  max-width: 400px;
   margin: 20px 0;
 }
 
@@ -169,7 +168,7 @@
 .kakaoButton,
 .naverButton {
   width: 100%;
-  max-width: 480px;
+  max-width: 400px;
   height: 60px;
   flex-shrink: 0;
   padding: 15px;
