--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -147,6 +147,10 @@
   cursor: pointer;
   margin-left: 10px;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 106px;
 }
 
 .emailButton:disabled {
@@ -186,6 +190,10 @@
   border: none;
   cursor: pointer;
   margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 106px;
 }
 
 .verifyButton:disabled {
@@ -206,6 +214,10 @@
   margin-left: 10px;
   font-weight: 700;
   opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 106px;
 }
 
 /* 반응형 미디어 쿼리 */
