--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -9,8 +9,9 @@
 }
 
 .joinContainer {
-  margin-top:108px;
+  margin-top:69px;
   margin-left:58px;
+  margin-bottom: 108px;
   width: 550px;
   height: 630px;
   flex-shrink: 0;
@@ -49,11 +50,11 @@
 
 .input {
   width: 100%;
-  height: 55px;
+  height: 48px;
   border: 1px solid #848282;
   border-radius: 5px;
   background: #ffffff;
-  font-size: 16px;
+  font-size: 14px;
   padding-left: 15px;
   box-sizing: border-box;
 }
@@ -110,6 +111,7 @@
   width: 100%;
   max-width: 400px;
   flex-wrap: wrap;
+  gap:2px;
 }
 
 .emailGroup {
