--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -9,8 +9,9 @@
 }
 
 .loginContainer {
-  margin-top:108px;
+  margin-top:69px;
   margin-left:58px;
+  margin-bottom: 108px;
   width: 550px;
   height: 630px;
   flex-shrink: 0;
