--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -36,7 +36,6 @@
   line-height: normal;
   text-align: center;
   margin-bottom: 2rem;
-  margin-top: 2rem;
 }
 
 .errorText {
@@ -44,13 +43,14 @@
   font-family:
     Noto Sans KR,
     sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   margin-top: 5px;
+  word-wrap: break-word;
+  max-width: 400px;
 }
 
 .inputGroup {
-  width: 100%;
-  min-width: 400px;
+  width: 400px;
   height: auto;
   flex-shrink: 0;
   margin-bottom: 15px;
@@ -79,7 +79,7 @@
   font-family:
     Noto Sans KR,
     sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   height: 55px;
   border: 1px solid red;
   padding-left: 15px;
@@ -218,6 +218,7 @@
 
   .inputGroup {
     width: 90%;
+    min-width: unset;
   }
 
   .socialLoginContainer,
@@ -249,7 +250,7 @@
   .input,
   .inputError {
     height: 45px;
-    font-size: 14px;
+    font-size: 12px;
   }
 
   .submitButton {
